# duckdb-parquet-parser

./: .gitignore  CMakeLists.txt  README.md
include/: column_info.hpp  column_reader.hpp  common.hpp  metadata.hpp  parquet_reader.hpp  rle_decoder.hpp  thrift.hpp
include/reader/: column_reader.hpp  metadata.hpp  parquet_reader.hpp
include/writer/: parquet_writer.hpp  rle_bp_encoder.hpp  thrift_writer.hpp
src/: client.cpp  column_info.cpp  column_reader.cpp  main.cpp  metadata.cpp  parquet_reader.cpp  thrift.cpp
src/reader/: column_info.cpp  column_reader.cpp  metadata.cpp  parquet_reader.cpp  thrift.cpp
src/writer/: parquet_writer.cpp  thrift_writer.cpp
tests/: README.md  index.cpp
